# cmake-lagom-template

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
CMake/: FetchLagom.cmake
Scripts/: build-and-run.sh  setup.sh
src/: main.cpp
